<resources>
    <string name="app_name">spacerace</string>
    <string name="credits">Space images from NASA. All other assets created by Zachary Allard.</string>

    <!-- Navigation labels -->
    <string name="title_journal">Journal</string>
    <string name="title_weather">Weather</string>
    <string name="title_word">Words</string>
    <string name="title_settings">Settings</string>

    <!-- FAB Text -->
    <string name="fab_new_note">+ New Note</string>
    <string name="fab_save">Save</string>

    <!-- Content Description -->
    <string name="cd_apod">NASA Astronmy Picture of the Day</string>
    <string name="menu">cd_menu</string>
    <string name="spacerace_banner">cd_banner</string>

    <!-- Note Placeholder -->
    <string name="note_title">Title</string>
    <string name="note_body">Body</string>

    <!-- Weather Fragment -->
    <string name="sol_text">Sol %1$s</string>
    <string name="north_season">N. Season: %1$s</string>
    <string name="south_season">S. Season: %1$s</string>
    <string name="pressure_header">Pressure</string>
    <string name="season_header">Season</string>
    <string name="avg_pressure">Avg. Pressure: %1$s Pa</string>
    <string name="min_pressure">Min: %1$s Pa</string>
    <string name="max_pressure">Max: %1$s Pa</string>
    <string name="word_button_text">Big Bang!</string>
    <string name="word_placeholder">Word</string>

    <!-- Social Media -->
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">YouTube</string>

    <!-- Setting Fragment -->
    <!-- Setting keys -->
    <string name="setting_key_border">border</string>
    <string name="setting_key_scale_type">scale_type</string>
    <string name="setting_key_resolution">resolution</string>
    <string name="setting_key_date_format">date_format</string>
    <!-- Settings menu text -->
    <string name="setting_border">Toggle Note Border</string>
    <string name="setting_scale_type">Switch Scale Type</string>
    <string name="setting_resolution">Change Image Resolution</string>
    <string name="setting_date_format">Swap Date Format</string>

    <!-- Word Generator Fragment -->
    <!-- The word list is located in Words.java -->
    <string-array name="word_groups">
        <item>Space Words</item>
        <item>Nerdy Words</item>
        <item>Fun Words</item>
        <item>All Words</item>
    </string-array>

</resources>