<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_journal">

    <fragment
        android:id="@+id/navigation_journal"
        android:name="com.example.spacerace.fragments.JournalFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.spacerace.fragments.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/navigation_word"
        android:name="com.example.spacerace.fragments.WordFragment"
        android:label="@string/title_word"
        tools:layout="@layout/fragment_word" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.spacerace.fragments.SettingsFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_settings" />
</navigation>