<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/martian_orange"
    tools:context=".fragments.EditFragment">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        android:paddingStart="@dimen/medium_padding"
        android:paddingTop="@dimen/large_padding"
        android:paddingEnd="@dimen/large_padding"
        android:background="@null"
        android:textColor="@color/black"
        android:textColorHint="@color/text_grey"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:layout_marginTop="57dp"
        android:paddingStart="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"
        android:paddingEnd="@dimen/large_padding"
        android:paddingBottom="@dimen/small_padding"
        android:hint="@string/note_body"
        android:textColorHint="@color/text_placeholder"
        android:inputType="textMultiLine"
        android:background="@null"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/body_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/spacerace_purple"
        android:gravity="center"
        android:text="@string/fab_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

</androidx.constraintlayout.widget.ConstraintLayout>